# colortools-gui

./: README.md  io.github.lentolen.json  meson.build
data/: io.github.lentolen.appdata.xml.in  io.github.lentolen.desktop.in  io.github.lentolen.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: colortools-gui.gresource.xml  colortools-gui.in  main.py  meson.build  window.py  window.ui
